// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have blank in list 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul>
      <li />
      <li>
        qwerty
      </li>
    </ul>
  </div>
</div>
`;

exports[`should have lists 1`] = `
<div>
  <div>
    <form>
      todo: 
      <input
        data-testid="input"
      />
    </form>
    <ul>
      <li>
        zxcvbn
      </li>
      <li>
        qwerty
      </li>
    </ul>
  </div>
</div>
`;
